--- a/assets/css/themes/mainwp-minimalistic-theme.css
+++ b/assets/css/themes/mainwp-minimalistic-theme.css
@@ -168,7 +168,7 @@ body.mainwp-ui.mainwp-custom-theme,
 }
 
 .mainwp-ui.mainwp-custom-theme #mainwp-select-sites-select-all-actions {
-  background-color: var(--background-color);
+  background-color: var(--border-color);
 }
 
 .mainwp-ui.mainwp-custom-theme .mainwp-side-content .title {
@@ -443,7 +443,7 @@ body.mainwp-ui.mainwp-custom-theme,
   color: var(--font-color);
 }
 
-.mainwp-ui.mainwp-custom-theme a:not( .button ) .icon {
+.mainwp-ui.mainwp-custom-theme a:not( .button ) .icon:not( .green, .red ) {
   color: var(--accent-color);
 }
 
@@ -537,11 +537,11 @@ body.mainwp-ui.mainwp-custom-theme,
 
 .mainwp-ui.mainwp-custom-theme .ui.pointing.vertical.menu {
   background-color: var(--background-color);
-  border-color: var(--border-color) !important;
+  border-color: var(--border-color);
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.pointing.vertical.menu .item {
-  border-color: var(--border-color) !important;
+  border-color: var(--border-color);
   color: var(--font-color);
 }
 
