--- a/assets/css/themes/mainwp-wpadmin-theme.css
+++ b/assets/css/themes/mainwp-wpadmin-theme.css
@@ -185,7 +185,7 @@ body.mainwp-ui.mainwp-custom-theme,
 }
 
 .mainwp-ui.mainwp-custom-theme #mainwp-select-sites-select-all-actions {
-  background-color: var(--background-color-2);
+  background-color: var(--border-color);
   border-color: var(--border-color);
 }
 
@@ -481,7 +481,7 @@ body.mainwp-ui.mainwp-custom-theme,
   color: var(--font-color);
 }
 
-.mainwp-ui.mainwp-custom-theme a:not( .button ) .icon {
+.mainwp-ui.mainwp-custom-theme a:not( .button ) .icon:not( .green, .red ) {
   color: var(--accent-color);
 }
 
@@ -580,7 +580,7 @@ body.mainwp-ui.mainwp-custom-theme,
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.pointing.vertical.menu .item {
-  border-color: var(--border-color) !important;
+  border-color: var(--border-color);
   color: var(--font-color);
 }
 
@@ -589,7 +589,7 @@ body.mainwp-ui.mainwp-custom-theme,
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.pointing.vertical.menu .item.active {
-  border-color: var(--border-color) !important;
+  border-color: var(--border-color);
   background-color: var(--background-color-4);
   color: var(--font-color);
 }
