Fixed: codefactor issues

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -447,7 +447,7 @@
 
 .mainwp-ui table.dataTable tbody tr > .dtfc-fixed-left,
 .mainwp-ui table.dataTable tbody tr > .dtfc-fixed-right {
-    background-color: rgba(0, 0, 0, 0.01);;
+    background-color: rgba(0, 0, 0, 0.01);
 }
 
 .mainwp-ui table ul.dtr-details {
